err/jalon.apogee.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jalon'...
Listing './lib/python3.5/site-packages/jalon/apogee'...
Listing './lib/python3.5/site-packages/jalon/apogee/browser'...
Listing './lib/python3.5/site-packages/jalon/apogee/browser/images'...
Listing './lib/python3.5/site-packages/jalon/apogee/browser/interfaces'...
Listing './lib/python3.5/site-packages/jalon/apogee/interfaces'...
Listing './lib/python3.5/site-packages/jalon/apogee/profiles'...
Listing './lib/python3.5/site-packages/jalon/apogee/profiles/default'...
Listing './lib/python3.5/site-packages/jalon/apogee/tables'...
Compiling './lib/python3.5/site-packages/jalon/apogee/utility.py'...
***   File "./lib/python3.5/site-packages/jalon/apogee/utility.py", line 89
    recherche = session.query(IAG.COD_GPE, GPE.LIB_GPE, GPE.COD_EXT_GPE, GPO.TYP_OBJ_GPO, GPO.COD_ELP, GPO.COD_ETP, GPO.COD_VRS_VET).outerjoin(GPE, IAG.COD_GPE == GPE.COD_GPE).outerjoin(GPO, GPE.COD_GPE == GPO.COD_GPE).outerjoin(IND, IAG.COD_IND == IND.COD_IND).filter(and_(IAG.COD_ANU == int(self.cod_anu), GPE.LIB_GPE <> None, IND.COD_ETU == COD_ETU)).group_by(IAG.COD_GPE, GPE.LIB_GPE, GPE.COD_EXT_GPE, GPE.COD_EXT_GPE, GPO.TYP_OBJ_GPO, GPO.COD_ELP, GPO.COD_ETP, GPO.COD_VRS_VET).order_by(GPE.LIB_GPE)
                                                                                                                                                                                                                                                                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jalon.apogee-1.3.1.post17.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
